--- a/src/html/goodsdetail.html
+++ b/src/html/goodsdetail.html
@@ -17,13 +17,13 @@
             <div class="oneplus8">
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="../html/goodsdetail.html?goodsId=10002">
                             <i class="iconfont icon-shouji2 xiala-i1"></i>
                             <h3 class="xiala-h31">OnePlus 8 Pro</h3>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="../html/goodsdetail.html?goodsId=10004">
                             <i class="iconfont icon-shouji2 xiala-i1"></i>
                             <h3 class="xiala-h31">OnePlus 8</h3>
                         </a>
@@ -33,13 +33,13 @@
             <div class="oneplus7t">
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="../html/goodsdetail.html?goodsId=10005">
                             <i class="iconfont icon-shouji1 xiala-i2"></i>
                             <h3 class="xiala-h32">OnePlus 7T</h3>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="../html/goodsdetail.html?goodsId=10003">
                             <i class="iconfont icon-shouji1 xiala-i2"></i>
                             <h3 class="xiala-h32">OnePlus 7T Pro</h3>
                         </a>
