--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,13 +15,13 @@
         <div class="oneplus8">
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="../html/goodsdetail.html?goodsId=10002">
                         <i class="iconfont icon-shouji2 xiala-i1"></i>
                         <h3 class="xiala-h31">OnePlus 8 Pro</h3>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="../html/goodsdetail.html?goodsId=10004">
                         <i class="iconfont icon-shouji2 xiala-i1"></i>
                         <h3 class="xiala-h31">OnePlus 8</h3>
                     </a>
@@ -31,13 +31,13 @@
         <div class="oneplus7t">
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="../html/goodsdetail.html?goodsId=10005">
                         <i class="iconfont icon-shouji1 xiala-i2"></i>
                         <h3 class="xiala-h32">OnePlus 7T</h3>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="../html/goodsdetail.html?goodsId=10003">
                         <i class="iconfont icon-shouji1 xiala-i2"></i>
                         <h3 class="xiala-h32">OnePlus 7T Pro</h3>
                     </a>
@@ -164,7 +164,7 @@
             <h2>OnePlus 8</h2>
             <h3>90Hz 柔性屏 | 骁龙 865 | 180g 轻薄</h3>
             <h4>¥ 3999 起</h4>
-            <p><a href="#">立即购买</a></p>
+            <p><a href="../html/goodsdetail.html?goodsId=10004">立即购买</a></p>
             <span><a href="#">了解产品 ></a></span>
         </div>
     </div>
@@ -177,7 +177,7 @@
             <h3>2K+120Hz 瞳孔屏｜骁龙 865</h3>
             <h4>¥ 5399 起</h4>
             <p><a href="#">立即购买</a></p>
-            <span><a href="#">了解产品 ></a></span>
+            <span><a href="../html/goodsdetail.html?goodsId=10004">了解产品 ></a></span>
         </div>
     </div>
 </div>
