--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
+<title>一加手机官网 -OnePlus 8系列，2K+ 120Hz 瞳孔屏。</title>
 <link rel="stylesheet" href="../css/reset.css">
 <link rel="stylesheet" href="../css/icon/iconfont.css">
 <link rel="stylesheet" href="../css/index.css">
