--- a/src/html/reg.html
+++ b/src/html/reg.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>一加手机官网 -OnePlus 8系列，2K+ 120Hz 瞳孔屏。</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/public.css">
     <link rel="stylesheet" href="../css/icon/iconfont.css">
@@ -140,7 +140,7 @@
             <div><h3>账单</h3></div>
             <div><h3>账户</h3></div>
             <div><h4>推荐有礼</h4></div>
-            <h5><a href="login.html">登录</a></h5>
+            <div class="index-co"><h5><a href="login.html">登录</a></h5></div>
         </div>
         <div class="shopping-i">
             <div class="shopping-h2"><h2>您的购物车里没有商品</h2></div>
@@ -314,4 +314,5 @@
 </html>
 <script src="../script/jquery-3.2.1.min.js"></script>
 <script src="../script/reg.js"></script>
+<script src="../script/cookie.js"></script>
 <script src="../script/index.js"></script>
