--- a/src/html/goodsdetail.html
+++ b/src/html/goodsdetail.html
@@ -190,7 +190,7 @@
                         <h3>¥3699.00</h3> -->
                     </div>
                     <div class="t2">
-                        <ul>
+                        <ul class="t3">
                             <li>随机购买配件，立享优惠</li>
                         </ul>
                     </div>
