--- a/src/html/index.html
+++ b/src/html/index.html
@@ -165,7 +165,7 @@
             <h3>90Hz 柔性屏 | 骁龙 865 | 180g 轻薄</h3>
             <h4>¥ 3999 起</h4>
             <p><a href="../html/goodsdetail.html?goodsId=10004">立即购买</a></p>
-            <span><a href="#">了解产品 ></a></span>
+            <span><a href="../html/goodsdetail.html?goodsId=10004">了解产品 ></a></span>
         </div>
     </div>
 </div>
@@ -176,8 +176,8 @@
             <h2>OnePlus 8 Pro</h2>
             <h3>2K+120Hz 瞳孔屏｜骁龙 865</h3>
             <h4>¥ 5399 起</h4>
-            <p><a href="#">立即购买</a></p>
-            <span><a href="../html/goodsdetail.html?goodsId=10004">了解产品 ></a></span>
+            <p><a href="../html/goodsdetail.html?goodsId=10002">立即购买</a></p>
+            <span><a href="../html/goodsdetail.html?goodsId=10002">了解产品 ></a></span>
         </div>
     </div>
 </div>
