--- a/src/html/reg.html
+++ b/src/html/reg.html
@@ -167,7 +167,7 @@
                 <h4>注册 OnePlus，即表示你同意 OnePlus 的</h4>
                 <em><a href="#" class="em-a1">使用条款</a> <b>和</b> <a href="#" class="em-a2">隐私政策</a></em>
                 <input type="button" class="btn" value="创建账号">
-                <span><a href="#" class="logina">登录</a></span>
+                <span><a href="login.html" class="logina">登录</a></span>
                 <div id="msg"></div>
             </div>
         </div>
